<resources>
    <string name="app_name">Münchner Museen</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search_hint">Suche</string>

    <string name="action_search">Suche</string>
    <string name="title_activity_maps">Münchner Museen</string>
    <string name="title_activity_museum">Münchner Museen</string>
    <string name="title_activity_detail">Münchner Museen</string>

    <string name="label_goto">Zur Karte</string>

    <string name="action_settings">Einstellungen</string>

    <string name="google_directions_api_key">AIzaSyBJFp8TrR1JYC9wW3hRykD1zAXCk2QzyGg</string>
    <!--
    <string name="nav_category_technology">Technik</string>
-->
    <string name="nav_home">Home</string>
    <string name="nav_overview">Übersicht</string>
    <string name="nav_categories">Kategorien</string>
    <string name="nav_category_technology">Technik</string>
    <string name="nav_category_history">Geschichte</string>
    <string name="nav_category_art">Kunst</string>
    <string name="nav_category_nature">Natur</string>
</resources>
