<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_home"/>
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/nav_overview"/>
    </group>

    <item android:title="@string/nav_categories">
        <menu>
            <item
                android:id="@+id/nav_category_technology"
                android:icon="@drawable/ic_menu_category_technology"
                android:title="@string/nav_category_technology"/>
            <item
                android:id="@+id/nav_category_history"
                android:icon="@drawable/ic_menu_category_history"
                android:title="@string/nav_category_history"/>
            <item
                android:id="@+id/nav_category_art"
                android:icon="@drawable/ic_menu_category_art"
                android:title="@string/nav_category_art"/>
            <item
                android:id="@+id/nav_category_nature"
                android:icon="@drawable/ic_menu_category_nature"
                android:title="@string/nav_category_nature"/>
        </menu>
    </item>
</menu>
